# instagiffer

./: .gitattributes  .gitignore  .pylintrc  AppxManifest.xml  Brewfile  CLAUDE.md  Makefile  README.md  imagemagick.mk  instagiffer.conf  instagiffer.icns  instagiffer.py  install-devtools.ps1  install-devtools.sh  installer.iss  main.py  make_app.sh  make_exe.bat  pyproject.toml  pytest.ini  requirements.txt  setup-mac-py2app.py  setup-win-cx_freeze.py  test_instagiffer.py
doc/graphics/: instagiffer.xbm
release/: Instagiffer-linux.spec  Instagiffer-mac.spec  Instagiffer-win.spec  Instagiffer.spec  install-devtools.ps1  installer.iss  setup-mac-py2app.py  setup-win-cx_freeze.py
scripts/: check_deps.py
scripts/test/: test_deps.py
scripts/test/data/: linux_ffmpeg.tar.xz
src/instagiffer/: __init__.py  _ffmpeg_video_info_fallback.py  _instagiffer.py  common.py  ffmpeg.py  instagiffer.conf  instagiffer.py  main.py
src/instagiffer/ui/: __init__.py
src/instagiffer/ui/example/: extraction_demo.py  path_widget_demo.py
src/instagiffer/ui/widget/: a2slider.py  path.py  timeline.py
test/: conftest.py  instagiffer_automation.py  test_ffmpeg.py  test_instagiffer.py
