[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instagiffer"
version = "2.0.0"
description = "The easy way to make GIFs from videos"
readme = "README.md"
license = "BSD-4-Clause"
requires-python = ">=3.14"
authors = [
    { name = "Justin Todd", email = "instagiffer@gmail.com" },
    { name = "Eric Werner", email = "ewerybody@gmail.com" }
]
keywords = ["gif", "video", "animation", "ffmpeg", "imagemagick"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "pyside6>=6.8",
    "pillow>=10.0",
    "pytest>=7.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[project.optional-dependencies]
dev = ["setuptools", "pytest", "pylint", "black"]
build-mac = ["pyinstaller"]
build-win = ["pyinstaller", "pywin32"]
test-win = ["pywinauto", "pyperclip"]

[project.urls]
Homepage = "https://instagiffer.com"
Repository = "https://github.com/ewerybody/instagiffer"
"Bug Tracker" = "https://github.com/ewerybody/instagiffer/issues"
Changelog = "https://github.com/ex-hale/instagiffer/releases"

[project.scripts]
instagiffer = "instagiffer:main"

[tool.setuptools]
py-modules = ["instagiffer"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 200
target-version = "py314"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["instagiffer"]
