[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instagiffer"
version = "2.0.0.alpha"
description = "The easy way to make GIFs from videos"
readme = "README.md"
license = "BSD-4-Clause"
requires-python = ">=3.14"
authors = [
    { name = "Justin Todd", email = "instagiffer@gmail.com" },
    { name = "Eric Werner", email = "ewerybody@gmail.com" }
]
keywords = ["gif", "video", "animation", "ffmpeg", "imagemagick"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "pyside6>=6.8",
    "pillow>=10.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "poethepoet",
    "rich>=14.3.3",
]

[project.urls]
Homepage = "https://instagiffer.com"
Repository = "https://github.com/ex-hale/instagiffer"
"Bug Tracker" = "https://github.com/ex-hale/instagiffer/issues"
Changelog = "https://github.com/ex-hale/instagiffer/releases"

[project.scripts]
instagiffer = "instagiffer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py314"
[tool.ruff.format]
quote-style = "single"
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["instagiffer"]

[tool.poe.tasks]
deps = { cmd = "python scripts/check_deps.py", help = "Make sure binary dependencies are present and up-to-date." }
